@@ -3,18 +3,71 @@ package com.railway.blindchess.chess;
 import org.springframework.stereotype.Component;
 
 import java.io.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Component
 public class StockfishEngine {
     private Process stockfishProcess;
     private BufferedReader reader;
     private BufferedWriter writer;
-    private static final String STOCKFISH_PATH = System.getenv().getOrDefault("STOCKFISH_PATH", "stockfish");
+    private static final String STOCKFISH_PATH = findStockfishPath();
+
+    private static String findStockfishPath() {
+        // First, check environment variable
+        String envPath = System.getenv("STOCKFISH_PATH");
+        if (envPath != null && !envPath.isEmpty()) {
+            if (Files.exists(Paths.get(envPath))) {
+                return envPath;
+            }
+        }
+
+        // Try common installation paths
+        String[] commonPaths = {
+            "/opt/homebrew/bin/stockfish",  // macOS Homebrew (Apple Silicon)
+            "/usr/local/bin/stockfish",      // macOS Homebrew (Intel) / Linux
+            "/usr/bin/stockfish",            // Linux system-wide
+            "stockfish"                      // In PATH
+        };
+
+        for (String path : commonPaths) {
+            if (path.equals("stockfish")) {
+                // For "stockfish", check if it's in PATH by trying to execute
+                try {
+                    Process process = Runtime.getRuntime().exec("which stockfish");
+                    try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                        String result = reader.readLine();
+                        if (result != null && !result.isEmpty()) {
+                            return "stockfish";
+                        }
+                    }
+                } catch (IOException ignored) {
+                }
+            } else {
+                Path filePath = Paths.get(path);
+                if (Files.exists(filePath) && Files.isExecutable(filePath)) {
+                    return path;
+                }
+            }
+        }
+
+        // Default fallback
+        return "stockfish";
+    }
 
     public void start() throws IOException {
-        stockfishProcess = Runtime.getRuntime().exec(STOCKFISH_PATH);
-        reader = new BufferedReader(new InputStreamReader(stockfishProcess.getInputStream()));
-        writer = new BufferedWriter(new OutputStreamWriter(stockfishProcess.getOutputStream()));
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder(STOCKFISH_PATH);
+            processBuilder.redirectErrorStream(true);
+            stockfishProcess = processBuilder.start();
+            reader = new BufferedReader(new InputStreamReader(stockfishProcess.getInputStream()));
+            writer = new BufferedWriter(new OutputStreamWriter(stockfishProcess.getOutputStream()));
+        } catch (IOException e) {
+            throw new IOException("Failed to start Stockfish at path: " + STOCKFISH_PATH + 
+                ". Please ensure Stockfish is installed and accessible. " +
+                "You can set STOCKFISH_PATH environment variable to the full path of the Stockfish executable.", e);
+        }
 
         sendCommand("uci");
         String line;
